--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
 </head>
 <body>
     <header>
-        <h1>ANSYS CFX 流体解析</h1>
+        <h1>ANSYS CFX 流体解析(CFX講習要約)</h1>
         <p>ステップ・バイ・ステップ 超かんたんガイド</p>
     </header>
 
